# abhiagarwal01

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CNAME  LICENSE  README.md  _quarto.yml  about.qmd  blog.qmd  index.qmd  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
_freeze/blog/2_fast_2_furious/index/execute-results/: html.json  ipynb.json
_freeze/blog/every_single_imax_in_the_world/index/execute-results/: ipynb.json
_freeze/blog/how_the_nba_determines_who_to_highlight/index/execute-results/: html.json  ipynb.json
_freeze/blog/reverse_engineering_pff/index/execute-results/: html.json  ipynb.json
about/: index.qmd
assets/styles/: dark.scss  theme.scss
blog/: _metadata.yml  index.qmd
blog/2_fast_2_furious/: index.qmd
blog/every_single_imax_in_the_world/: backup_table.html  index.qmd
blog/extremely_fast_ipc_file_locking/: index.qmd
blog/full_stack_dev/: index.qmd  markey_map_bus.avif
blog/how_the_nba_determines_who_to_highlight/: index.qmd
blog/how_the_nba_determines_who_to_highlight/data/: all_videos.pkl  vid_details.db  vid_details.parquet
blog/how_the_nba_determines_who_to_highlight/scripts/: download_headshots.py  download_videos.py
blog/nba_usage_inequality/: index.qmd
blog/omscs/: omscs_for_dummies.qmd
blog/omscs_for_dummies/: index.qmd
blog/openwrt-openwisp/: index.qmd  post.qmd
blog/post_college_finances_dummies/: index.qmd
blog/quest_for_gaming/: index.qmd
blog/reverse_engineering_pff/: index.qmd
blog/reverse_engineering_pff/assets/code/: leagues_payload.json
blog/spa_runtime_environment_variables/: index.qmd
blog/television_cinematography_tiktok_depth_pro/: index.qmd
posts/: _metadata.yml
posts/nba_usage_inequality/: citations.yaml  post.qmd
posts/openwrt-openwisp/: post.qmd
posts/post-with-code/: index.qmd
posts/welcome/: index.qmd
