[project]
name = "abhiaagarwal"
version = "0.1.0"
description = "quarto-based blog"
authors = [
    { name = "Abhi Agarwal", email = "abhiaagarwal01@gmail.com" }
]
dependencies = [
    "jupyter>=1.0.0",
    "jupyter-cache>=1.0.0",
    "pydantic>=2.6.3",
    "devtools>=0.12.2",
    "rich>=13.7.1",
    "nbformat>=5.9.2",
    "polars>=0.20.14",
    "algoliasearch>=3.0.0",
    "ipyleaflet>=0.18.2",
    "itables[polars]>=1.7.1",
    "lxml>=5.1.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ruff>=0.3.2",
    "pre-commit>=3.6.2",
]
