[project]
name = "abhiaagarwal"
version = "0.1.0"
description = "quarto-based blog"
authors = [
    { name = "Abhi Agarwal", email = "abhiaagarwal01@gmail.com" }
]
dependencies = [
    "jupyter>=1.0.0",
    "jupyter-cache>=1.0.0",
    "pydantic>2.10",
    "devtools>=0.12.2",
    "rich>=13.7.1",
    "nbformat>=5.9.2",
    "polars>=1.0.0",
    "algoliasearch>=3.0.0",
    "ipyleaflet>=0.18.2",
    "itables[polars]>=1.7.1",
    "lxml>=5.1.0",
    "pytubefix>=8.8.1",
    "ruff>=0.8.3",
]
readme = "README.md"

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
    "pre-commit>=3.6.2",
]
